--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = list(map(lambda restaurant: restaurant['tyitia=='], restaurants))\n",
+    "total_reviews = list(map(lambda restaurant: restaurant['total_review'], restaurants))\n",
     "total_reviews # 3420"
    ]
   },
