--- a/index.ipynb
+++ b/index.ipynb
@@ -377,12 +377,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(map(format_restaurant,restaurants))"
    ]
   },
   {
